--- a/style.css
+++ b/style.css
@@ -594,14 +594,14 @@ footer p {
 }
 
 .icones21 a {
-    color: white;
+    color: rgb(255, 255, 255);
     font-size: 2em;
     margin: 0 15px;
     transition: color 0.3s;
 }
 
-.icones2 a:hover {
-    color: rgba(156, 156, 156, 0.692);
+.icones21 a:hover {
+    color: rgba(160, 160, 160, 0.692);
 }
 
 /* Responsividade */
